# PhyloTracer

./: .coverage  .gitignore  Base.py  BranchLength_NumericConverter.py  CITATION.cff  CODE_REVIEW_REPORT_17MODULES.md  CODE_REVIEW_REPORT_ZYY.md  CONTRIBUTING.md  Dockerfile  Eliminate_PhyloNoise.py  Filter.py  GD_Detector.py  GD_Loss_Tracer.py  GD_Loss_Tracker.py  GD_Loss_Visualizer.py  GD_Visualizer.py  GeneDynamics_Tracker.py  Gene_Gain_And_Loss_Visualization.py  HaploFinder.py  Hybrid_Tracer.py  Hybrid_Visualizer.py  LICENSE  OrthoFilter_LB.py  OrthoFilter_Mono.py  OrthoFilter_Multi.py  OrthoFilter_Single.py  Ortho_Retriever.py  Ortho_Split.py  PhyloNoise_Filter.py  PhyloSupport_Scaler.py  PhyloTracer.py  PhyloTree_CollapseExpand.py  Phylo_Collapse.py  Phylo_Collapse_Visualizer.py  Phylo_GeneExpression_Visualizer.py  Phylo_Rooter.py  Phylo_Rooting.py  Phylo_Tracer.py  README.md  REAMDE.md  (+10 more)
.github/workflows/: ci.yml
2_PhyloSupport_Scaler/: GF.txt  test.sh
2_PhyloSupport_Scaler/10tree/: OG10007_1.treefile
3_BranchLength_NumericConverter/: test.sh
3_BranchLength_NumericConverter/10tree/: OG10000_1.treefile
PhyloTracer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Statistical_Topology/: Statistical_Topology.py
Statistical_Topology/100tree/: OG_104045.treefile  OG_104052.treefile  OG_104059.treefile  OG_104072.treefile  OG_104075.treefile  OG_104085.treefile  OG_104093.treefile
benchmarks/: README.md  benchmark.py
docs/: Makefile  analyze.rst  conf.py  index.rst  input_files.rst  installation.rst  requirements.txt
docs/_build/html/: analyze.html  (+6 more)
docs/html/: search.html  searchindex.js
example_data/: 11_GD_Loss_Tracker  GF.txt  Obtain_Statistical_calde.txt  README.md  command  genus  order  run_all_examples.sh  run_command.html  run_command.ipynb  taxa.txt
example_data/02_MulRF_Distance/: GF_ID2path_2.imap  gene2sps_1.imap  gene2sps_2.imap  mulrf_mode1.tsv  mulrf_mode2.tsv
example_data/09_Tree_Visualizer/: Family.imap  Order.imap  heatmap_matrix.txt
example_data/100tree/: OG_104002.treefile  OG_104003.treefile  OG_104010.treefile  OG_104014.treefile  OG_104071.treefile  OG_104088.treefile  OG_104089.treefile
example_data/10_GD_Detector/: gd_result.txt  gf_one.imap
example_data/10_GD_Visualizer/: gd_result.txt  gd_result_relaxed.txt
example_data/11_GD_Loss_Tracker/: GF_ID2path.imap  gd_loss.xlsx  gd_loss_count_summary.txt  gd_loss_gf_count_summary.txt  gene2sps.imap  node  sptree.nwk
example_data/11_GD_Visualizer/: gd_result_relaxed.txt  gd_result_strict.txt
example_data/12_GD_Loss_Tracker/: gd_loss.csv  gd_loss_summary.txt  gd_summary.txt
example_data/12_GD_Loss_Visualizer/: numed_sptree.nwk
example_data/13_GD_Loss_Visualizer/: gd_loss_summary.txt  numed_sptree.nwk
example_data/13_Ortho_Retriever/: gene2length.imap  imap.txt  ortho_retriever_summary.txt  ortholog_trees.tsv  result.txt  test.sh
example_data/14_Hybrid_Tracer/: N1.txt  alngf0.txt  gf.txt  gf0.txt  gf_aln.imap  gf_aln.txt  gf_tree.imap  hyde_filtered_out.txt  hyde_out.txt  sptree.nwk
example_data/14_Ortho_Retriever/: collinearity  ortho_retriever_summary.txt
example_data/15_Hybrid_Tracer/: gf.txt  gf_aln.txt  hyde_event_assignments.tsv  hyde_filtered_out.txt  hyde_out.txt  hyde_summary.txt  imap.list
example_data/15_Hybrid_Visualizer/: hyde_filtered_out.txt  merged_filtered.txt  sptree.nwk
phylotracer/: BranchLength_NumericConverter.py  GD_Detector.py  GD_Loss_Tracker.py  GD_Loss_Visualizer.py  GD_Visualizer.py  HaploFinder.py  Hybrid_Tracer.py  Hybrid_Visualizer.py  MulRF_Distance.py  OrthoFilter_LB.py  OrthoFilter_Mono.py  Ortho_Retriever.py  PhyloSupport_Scaler.py  PhyloTree_CollapseExpand.py  Phylo_Rooter.py  Phylo_Tracer.py  SyntenyRate.py  TreeTopology_Summarizer.py  Tree_Visualizer.py  __init__.py
result/: GD_Detector_result.txt
test_result/: 10tree_gf.txt
tests/: conftest.py  test_gd_detector.py  test_gd_loss_tracker_classification.py  test_gd_loss_visualizer.py  test_gd_visualizer.py  test_haplo_finder.py  test_init.py  test_mulrf_distance.py  test_ortho_retriever.py  test_orthofilter_lb.py  test_orthofilter_mono.py  test_phylo_rooter.py  test_phylo_tracer_cli.py  test_tree_topology_summarizer.py
(+17928 files in other folders)
