[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PhyloTracer"
version = "1.0.0"
authors = [
  { name="TAOLI", email="l948777439@163.com" },
]
description = "This is a bioinformatics software that uses RF distance, branch length, and gene length for rooting"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

