[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PhyloTracer"
version = "1.0.0"
description = "A toolkit for gene tree rooting, gene duplication identification, ortholog retrieval, phylogenetic noise elimination, species hybridization detection, and visualization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Yiyong Zhao", email = "yzhao@bwh.harvard.edu" },
    { name = "Tao Li", email = "Taoli@gmail.com" },
]
keywords = ["phylogenetics", "gene duplication", "ortholog", "hybridization", "tree visualization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "ete3",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "tqdm",
    "biopython",
    "pypdf>=3.0.0",
    "pillow",
    "phyde>=1.0.2",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/YiyongZhao/PhyloTracer"
Documentation = "https://phylotracer.readthedocs.io"

[project.scripts]
PhyloTracer = "phylotracer.Phylo_Tracer:main"

[tool.setuptools.packages.find]
include = ["phylotracer*"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=phylotracer --cov-report=term-missing"
